# aoc_py

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  startup.ipy
helpers/: input.py  int_code.py
scripts/: gen.py
src/helpers/: input.py  int_code.py
src/scripts/: gen.py
src/year_2015/: day_15_01.py  day_15_02.py  day_15_03.py  day_15_05.py
src/year_2016/: day_16_01.py  day_16_02.py  day_16_03.py  day_16_04.py  day_16_06.py  day_16_07.py
src/year_2017/: day_17_01.py  day_17_02.py  day_17_04.py  day_17_05.py  day_17_09.py
src/year_2018/: day_18_01.py  day_18_02.py
src/year_2019/: day_19_01.py  day_19_02.py
src/year_2020/: day_20_01.py  day_20_02.py  day_20_03.py  day_20_04.py  day_20_05.py  day_20_06.py  day_20_08.py
src/year_2021/: day_21_01.py  day_21_02.py  day_21_03.py
src/year_2022/: day_22_01.py  day_22_02.py  day_22_03.py  day_22_04.py  day_22_06.py
src/year_2023/: day_23_01.py  day_23_02.py  day_23_04.py
test/test_year_2015/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_15_01.py  test_day_15_02.py  test_day_15_03.py  test_day_15_05.py
test/test_year_2016/: test_day_16_01.py  test_day_16_02.py  test_day_16_03.py  test_day_16_04.py  (+2 more)
year_2015/: day_1.py  day_2.py  day_3.py
year_2016/: day_1.py  day_2.py  day_3.py
year_2017/: day_1.py  day_2.py  day_4.py
year_2018/: day_1.py  day_2.py
year_2019/: day_1.py  day_2.py
year_2020/: day_1.py
year_2021/: day_1.py  day_2.py
year_2022/: day_1.py
year_2023/: day_1.py
(+88 files in other folders)
