[tool.poetry]
name = "aoc_py"
version = "0.1.0"
description = "Solving advent of code using Python"
authors = ["Mafinar Khan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
